--- a/index.html
+++ b/index.html
@@ -128,6 +128,109 @@
     </div>
     <!-- End Featurs  -->
 
+    <!-- Start Our Work -->
+    <div class="our-work text-center pt-5 pb-5">
+        <div class="container">
+            <div class="main-title mb-5">
+                <i class="fa-solid fa-wand-magic-sparkles"></i>
+                <h1>We make this</h1>
+                <p>Prepare to be amazed</p>
+            </div>
+            <ul class="d-flex justify-content-center">
+                <li class="active rounded-pill">All</li>
+                <li class="rounded-pill">Design</li>
+                <li class="rounded-pill">Code</li>
+                <li class="rounded-pill">Photo</li>
+                <li class="rounded-pill">App</li>
+            </ul>
+            <div class="row pt-5">
+                <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="box mb-3 bg-white" data-work="Application">
+                        <img class="img-fluid" src="imgs/work-01.jpg" alt="logo">
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="box mb-3 bg-white" data-work="Application">
+                        <img class="img-fluid" src="imgs/work-02.jpg" alt="logo">
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="box mb-3 bg-white" data-work="Application">
+                        <img class="img-fluid" src="imgs/work-03.jpg" alt="logo">
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="box mb-3 bg-white" data-work="Application">
+                        <img class="img-fluid" src="imgs/work-04.jpg" alt="logo">
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="box mb-3 bg-white" data-work="Application">
+                        <img class="img-fluid" src="imgs/work-05.jpg" alt="logo">
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="box mb-3 bg-white" data-work="Application">
+                        <img class="img-fluid" src="imgs/work-06.jpg" alt="logo">
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="box mb-3 bg-white" data-work="Application">
+                        <img class="img-fluid" src="imgs/work-07.jpg" alt="logo">
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="box mb-3 bg-white" data-work="Application">
+                        <img class="img-fluid" src="imgs/work-08.jpg" alt="logo">
+                    </div>
+                </div>
+            </div>
+            <a href="#" class="btn main-btn bg-danger rounded-pill text-white ps-4 pe-4 mt-5">I want more...</a>
+        </div>
+    </div>
+    <!-- End Our Work -->
+
+    <!-- Start Stuff  -->
+    <div class="stuff pt-5">
+        <div class="container">
+            <div class="main-title mb-5">
+                <i class="fa-solid fa-wand-magic-sparkles"></i>
+                <h1>Some stuff about us</h1>
+                <p>The great team</p>
+            </div>
+            <p class="text-center text-black-50 w-50 position-relative ms-auto me-auto">Donec rutrum congue leo eget
+                malesuada.
+                Mauris
+                blandit aliquet
+                elit,
+                eget
+                tincidunt nibh
+                pulvinar a.
+                Pellentesque in ipsum id orci porta dapibus. Po=roin eget tortor risus. Donecsollicitudin molestie
+                malesuada.</p>
+            <div
+                class="box d-flex flex-lg-row flex-md-row flex-sm-column justify-content-center align-items-center flex-wrap mt-5 ">
+                <div class="left w-50 mb-sm-5 w-sm-100">
+                    <h2 class="w-sm-100">Retina Design</h2>
+                    <p class="text-black-50 w-sm-100">Vestibulum ac diam sit amet quam vehicula elementum sed sit amet
+                        dui.
+                        Mauris blandit aliquet
+                        elit,
+                        eget tincidunt nibh pulvinar a.</p>
+                    <p class="text-black-50 w-sm-100">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
+                        adipisci
+                        quibusdam modi
+                        exercitationem
+                        fuga. Nulla labore adipisci rem</p>
+                    <a href="#" class="btn main-btn bg-danger rounded-pill text-white ps-4 pe-4 mt-5">Order
+                        me one</a>
+                </div>
+                <img src="imgs/laptop.png" alt="logo" class="img-fluid w-50 w-sm-100">
+            </div>
+        </div>
+    </div>
+    <!-- End Stuff  -->
+
     <!-- Js Script files  -->
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/all.min.js"></script>
