--- a/index.html
+++ b/index.html
@@ -231,6 +231,171 @@
     </div>
     <!-- End Stuff  -->
 
+    <!-- Start Team  -->
+    <div class="team pt-5 pb-5 text-center">
+        <div class="container pt-5 pb-5">
+            <h1 class="fw-bold">Meet the team</h1>
+            <p class="text-black-50 mb-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis placeat
+                voluptates sed vitae eos
+                architecto ullam, delectus rerum, dolore beatae nobis aut, eius libero debitis saepe. Eaque nisi modi
+                repellat?</p>
+            <div class="row">
+                <div class="col-md-6 col-lg-3">
+                    <div class="box bg-light p-1">
+                        <img class="img-fluid" src="imgs/team-1.png" alt="">
+                        <h3 class="p-3 text-white">Luce sluwalker</h3>
+                        <q class="text-black-50 fw-bold">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Est
+                            incidunt
+                            magnam
+                            aspernatur voluptate
+                        </q>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <div class="box bg-light p-1">
+                        <img class="img-fluid" src="imgs/team-2.png" alt="">
+                        <h3 class="p-3 text-white">Luce sluwalker</h3>
+                        <q class="text-black-50 fw-bold">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Est
+                            incidunt
+                            magnam
+                            aspernatur voluptate
+                        </q>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <div class="box bg-light p-1">
+                        <img class="img-fluid" src="imgs/team-3.png" alt="">
+                        <h3 class="p-3 text-white">Luce sluwalker</h3>
+                        <q class="text-black-50 fw-bold">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Est
+                            incidunt
+                            magnam
+                            aspernatur voluptate
+                        </q>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <div class="box bg-light p-1">
+                        <img class="img-fluid" src="imgs/team-4.png" alt="">
+                        <h3 class="p-3 text-white">Luce sluwalker</h3>
+                        <q class="text-black-50 fw-bold">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Est
+                            incidunt
+                            magnam
+                            aspernatur voluptate
+                        </q>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Team  -->
+
+    <!-- Start Tech  -->
+    <div class="tech pt-5 pb-5 text-center">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+                    <img class="img-fluid" src="imgs/tech-1.png" alt="">
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+                    <img class="img-fluid" src="imgs/tech-2.png" alt="">
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+                    <img class="img-fluid" src="imgs/tech-3.png" alt="">
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+                    <img class="img-fluid" src="imgs/tech-4.png" alt="">
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+                    <img class="img-fluid" src="imgs/tech-1.png" alt="">
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+                    <img class="img-fluid" src="imgs/tech-2.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Tech  -->
+
+    <!-- Start Projects  -->
+    <div class="projects pt-5 pb-5 text-center text-light">
+        <div class="container">
+            <h1>start your project now</h1>
+            <p class="text-white-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque facilis sequi
+            </p>
+            <a href="#" class="btn main-btn bg-danger rounded-pill text-white ps-4 pe-4 mt-5">Start Project</a>
+        </div>
+    </div>
+    <!-- End Projects  -->
+
+    <!-- Start Blog  -->
+    <div class="blog pt-5 pb-5 text-center">
+        <div class="container">
+            <div class="main-title mb-5">
+                <i class="fa-solid fa-wand-magic-sparkles"></i>
+                <h1>read our blog</h1>
+                <p>new stories</p>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-lg-4">
+                    <div class="card border-none">
+                        <img src="imgs/blog-1.jpg" alt="">
+                        <div class="card-body">
+                            <span class="card-text">Oct 1, 2022</span>
+                            <h5 class="card-title">Some awesome blog title here</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="card border-none">
+                        <img src="imgs/blog-2.jpg" alt="">
+                        <div class="card-body">
+                            <span class="card-text">Oct 1, 2022</span>
+                            <h5 class="card-title">Some awesome blog title here</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="card border-none">
+                        <img src="imgs/blog-3.jpg" alt="">
+                        <div class="card-body">
+                            <span class="card-text">Oct 1, 2022</span>
+                            <h5 class="card-title">Some awesome blog title here</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a href="#" class="btn main-btn bg-danger rounded-pill text-white ps-4 pe-4 mt-5">more stories</a>
+
+        </div>
+    </div>
+    <!-- End Blog  -->
+
+    <!-- Start Subscribe -->
+    <div class="subscribe pt-5 pb-5 text-center">
+        <div class="container">
+            <fore class="row align-items-center">
+                <div class="col-md-6 col-lg-3 mb-md-3">
+                    <div class="fw-bold">Subscribe to our newsletter:</div>
+                </div>
+                <div class="col-md-6 col-lg-7 mb-md-3">
+                    <input class="w-100 p-2 text-light bg-transparent" type="text" placeholder="Enter Your Email..">
+                </div>
+                <div class="col-md-6 col-lg-2">
+                    <input class="btn rounded-pill mt-sm-3 mt-md-0" type="submit" value="Subscribe">
+                </div>
+            </fore>
+        </div>
+    </div>
+    <!-- End Subscribe -->
+
+    <!-- Start Footer  -->
+    
+    <!-- End Footer  -->
+
     <!-- Js Script files  -->
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/all.min.js"></script>
