--- a/index.html
+++ b/index.html
@@ -393,7 +393,58 @@
     <!-- End Subscribe -->
 
     <!-- Start Footer  -->
-    
+    <div class="footer pt-5 pb-5">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-6 col-lg-4 text-white-50">
+                    <img class="img-fluid mb-3" src="imgs/logo.png" alt="">
+                    <p class="mb-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. In, adipisci. Iure dolor.
+                    </p>
+                    <div class="info">
+                        <p class="m-0">Created By <span>Graphberry</span></p>
+                        <p class="copyright m-0">&copy; 2022-<span>Bondi Inc</span></p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-2 text-white-50">
+                    <h2 class="text-light">Links</h2>
+                    <ul>
+                        <li class="mb-2">Home</li>
+                        <li class="mb-2">Our Services</li>
+                        <li class="mb-2">Portfolio</li>
+                        <li class="mb-2">Testimonials</li>
+                        <li class="mb-2">Support</li>
+                        <li class="mb-2">Terms And Condition</li>
+                    </ul>
+                </div>
+                <div class="col-md-6 col-lg-2 text-white-50">
+                    <h2 class="text-light">About Us</h2>
+                    <ul>
+                        <li class="mb-2">Sign in</li>
+                        <li class="mb-2">Register</li>
+                        <li class="mb-2">About Us</li>
+                        <li class="mb-2">Blog</li>
+                        <li class="mb-2">Contact Us</li>
+                    </ul>
+                </div>
+                <div class="col-md-6 col-lg-4 text-light text-white-50">
+                    <h2 class="text-light">Contact Us</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus facilis quia illum
+                        minima nam ea, quidem ab officiis.</p>
+                    <a href="#"
+                        class="w-100 mb-3 btn main-btn bg-danger rounded-pill text-white ps-4 pe-4 mt-5">graphberry@gmail.com</a>
+                    <div class="icons">
+                        <ul class="d-flex">
+                            <li><a href=""><img src="imgs/facebook.png" alt=""></a></li>
+                            <li><a href=""><img src="imgs/twitter.png" alt=""></a></li>
+                            <li><a href=""><img src="imgs/in.png" alt=""></a></li>
+                            <li><a href=""><img src="imgs/insta.png" alt=""></a></li>
+                            <li><a href=""><img src="imgs/youtube.png" alt=""></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- End Footer  -->
 
     <!-- Js Script files  -->
